--- a/project/src/assets/css/common.scss
+++ b/project/src/assets/css/common.scss
@@ -1,9 +1,13 @@
 @import "reset";
 @import "fonts";
 @import "@/assets/css/mixin";
+@import "@/assets/css/form";
 
 /* mobile */
 
+$break-mobile: 720px;
+$break-mobileIphone:375px;
+$break-tab:1190px;
 body {
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
@@ -11,7 +15,7 @@ body {
 }
 
 
-/* layout */
+/* layout - 1190px ~ 100% */
 
 header {
     background-color: #fff;
@@ -63,6 +67,12 @@ footer {
             text-align: right;
             padding: 15px 0;
         }
+        @media screen and(max-width: $break-tab) {
+            max-width: 1190px;
+        }
+        @media screen and(max-width: $break-mobile) {
+            max-width: 750px;
+        }
     }
 }
 
@@ -76,6 +86,9 @@ footer {
     min-width: 1190px;
     height: 90px;
     margin: 0 auto;
+    @media screen and (max-width: 1190px) {
+        min-width: 100%;
+    }
     h1,
     ul {
         float: left;
@@ -85,29 +98,46 @@ footer {
         top: 50%;
         left: 0;
         margin-top: -30px;
-        padding-left: 80px;
+        margin-left: 80px;
         height: 90px;
+        width: 180px;
         @include boxSizing;
         img {
-            width: 180px;
-            height: 60px;
+            width: 100%;
+        }
+        @media screen and (max-width:1190px) {
+            margin-left: 2%;
         }
     }
-    ul {
+    .center {
         position: absolute;
         top: 0;
         left: 50%;
-        width: 820px;
-        margin-left: -410px;
-    }
-    ul li {
-        list-style: none;
-        float: left;
-        font-size: 20px;
-        font-weight: 700;
-        color: #333;
-        line-height: 90px;
-        padding: 0 30px;
+        width: 1400px;
+        transform: translateX(-50%);
+        ul {
+            margin-left: 10%;
+        }
+        ul li {
+            list-style: none;
+            float: left;
+            font-size: 20px;
+            font-weight: 700;
+            color: #333;
+            line-height: 90px;
+            padding: 0 30px;
+        }
+        @media screen and (max-width:1740px) {
+            max-width: 1190px;
+            position: relative;
+            top: 0;
+            left: 0;
+            margin-left: 220px;
+            transform: translateX(0);
+        }
+        @media screen and (max-width:1190px) {
+            display: none;
+        }
     }
     .top-nav {
         position: absolute;
@@ -152,6 +182,9 @@ footer {
                 background: #999;
             }
         }
+        @media screen and (max-width:1190px) {
+            display: none;
+        }
     }
 }
 
@@ -169,27 +202,37 @@ h1 {
     height: 100%;
     padding-top: 40px;
     background-color: #efefef;
+    @media screen and (max-width: 720px) {
+        padding-top: 0;
+    }
 }
 
 .sub-container {
     overflow: hidden;
     margin: 0 auto;
-    width: 1190px;
+    min-width: 320px;
+    max-width: 1190px;
+    width: 100%;
     height: 100%;
     text-align: left;
     background-color: #384d6e;
     nav {
         float: left;
-        width: 370px;
+        max-width: 370px;
+        width: 31%;
         height: 100%;
         padding: 60px 40px;
         color: #fff;
         @include boxSizing;
+        @media screen and (max-width: 720px) {
+            display: none;
+        }
     }
     .content {
-        float: left;
-        width: 820px;
-        padding: 60px 120px;
+        float: right;
+        max-width: 821px;
+        width: 69%;
+        padding: 3.75em 7.5em;
         @include boxSizing;
         background-color: #fff;
         .title {
@@ -204,6 +247,12 @@ h1 {
         }
         .info-text-row {
             margin-bottom: 6px;
+        }
+        @media screen and (max-width: 720px) {
+            float: left;
+            width: 100%;
+            max-width: 720px;
+            padding: 1.8em 3.75em;
         }
     }
 }
@@ -240,6 +289,11 @@ h1 {
                 }
             }
         }
+    }
+    @media screen and(max-width: $break-tab) {}
+    @media screen and(max-width: $break-mobile) {
+        //720px
+        display: none;
     }
 }
 
@@ -282,242 +336,9 @@ h1 {
         border-bottom: 1px solid #000;
         margin-bottom: 20px;
     }
-}
-
-
-/* form */
-
-.form-wrap {
-    margin-bottom: 22px;
-    @include afterSet;
-    .title {
-        font-size: 12px;
-        color: #333;
+    h4 {
         font-weight: bold;
-        margin-bottom: 12px;
-    }
-}
-
-input:focus {
-    outline: none
-}
-
-
-/* radio form */
-
-input[type="radio"] {
-    /* 기본 디자인 리셋 */
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-}
-
-input[type="radio"]+label {
-    display: inline-block;
-    position: relative;
-    top: -5px;
-    padding-left: 28px;
-    font-size: 14px;
-    color: #333;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-input[type="radio"]+label:before {
-    display: inline-block;
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    width: 18px;
-    height: 18px;
-    background-color: #fff;
-    border: 1px solid #999;
-    border-radius: 50%;
-}
-
-input[type="radio"]:checked+label:before {
-    background-color: #3c6def;
-    border: 1px solid #3c6def;
-}
-
-input[type="radio"]:checked+label:after {
-    display: inline-block;
-    content: '';
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    z-index: 2;
-    width: 8px;
-    height: 8px;
-    background-color: #fff;
-    border-radius: 50%;
-}
-
-input[type="text"]+label {
-    @include hidden;
-}
-
-.form-wrap {
-    input[type="text"] {
-        padding: 10px 12px;
-        color: #999;
-        border-radius: 4px;
-        border: solid 1px #b9b9b9;
-        font-size: 14px;
-        margin-bottom: 8px;
-    }
-    .form-large>input {
-        width: 100%;
-        @include boxSizing;
-    }
-}
-
-
-/* select */
-
-select {
-    -webkit-appearance: none;
-    -ms-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    padding: 7px 34px 7px 12px;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: 2;
-}
-
-select::ms-expand {
-    display: none;
-}
-
-.select-form {
-    position: relative;
-    border: solid 1px #b9b9b9;
-    border-radius: 4px;
-    background: #fff;
-    label {
-        @include hidden;
-    }
-}
-
-.select-form::before {
-    display: inline-block;
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 8px;
-    z-index: 1;
-    width: 15px;
-    height: 8px;
-    margin-top: -4px;
-    background: url('../images/icon_arrow.png') no-repeat;
-}
-
-.select-form.hover::before {
-    //background 반전
-    transform: rotateX('180');
-}
-
-.date-list {
-    @include afterSet;
-    margin-bottom: 8px;
-    p {
-        margin-bottom: 4px;
-    }
-    .select-form {
-        float: left;
-        width: 188px;
-    }
-    .select-month {
-        margin: 0 5px;
-    }
-}
-
-
-/* 2개 radio */
-
-.form-wrap {
-    .two-radio {
-        overflow: hidden;
-        margin-bottom: 8px;
-        width: 55%;
-        .radio-form {
-            float: left;
-            width: 50%;
-        }
-    }
-    .three-radio {
-        overflow: hidden;
-        margin-bottom: 8px;
-        .radio-form {
-            float: left;
-            width: 33.3%;
-        }
-    }
-    .four-radio {
-        overflow: hidden;
-        margin-bottom: 8px;
-        .radio-form {
-            float: left;
-            width: 25%;
-        }
-    }
-    p {
-        font-size: 14px;
-        color: #333
-    }
-}
-
-
-/* file */
-
-.file-form {
-    @include afterSet;
-    input.file-name {
-        width: 425px;
-        border: 1px solid #999;
-    }
-    input[type="file"] {
-        /* 기본 디자인 리셋 */
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        padding: 0;
-        margin: -1px;
-        overflow: hidden;
-        clip: rect(0, 0, 0, 0);
-        border: 0;
-    }
-    input.file-name+.find-file {
-        display: block;
-        overflow: initial;
-        position: relative;
-        left: 0;
-        float: right;
-        min-width: 120px;
-        height: 44px;
-        line-height: 44px;
-        background: #758298;
-        color: #fff;
-        text-align: center;
-        border-radius: 22px;
-        font-size: 14px;
-        margin-bottom: 8px;
-        text-indent: initial;
-    }
-    input.file-name+.disabled {
-        background-color: #a7afbe;
+        font-size: 16px;
     }
 }
 
@@ -530,7 +351,7 @@ select::ms-expand {
     button {
         display: inline-block;
         margin: 0 auto;
-        text-align: middle;
+        text-align: center;
         font-size: 16px;
         color: #fff;
     }
@@ -539,10 +360,89 @@ select::ms-expand {
         height: 50px;
         border-radius: 25px;
         background-color: #133db1;
+        @media screen and (max-width: 720px) {
+            min-width: 100%;
+            width: 100%;
+        }
+    }
+    .default {
+        width: 220px;
+        height: 44px;
+        border-radius: 22px;
+        background-color: #758298;
+        color: #fff;
+        text-align: center;
+        margin: 0 auto;
     }
     .button-primary {
         background-color: #133db1;
     }
+    .middle {
+        float: left;
+        min-width: 120px;
+        height: 44px;
+        margin-left: 10px;
+        line-height: 44px;
+        background: #758298;
+        color: #fff;
+        text-align: center;
+        border-radius: 22px;
+        font-size: 14px;
+        margin-bottom: 8px;
+        text-indent: initial;
+    }
+}
+
+.form-button {
+    float: left;
+    width: 100%;
+    @include afterSet;
+    input[type="text"] {
+        float: left;
+        width: 450px;
+    }
+    .button-wrap {
+        margin-bottom: 0;
+    }
+}
+
+.button-wrap.table-form {
+    margin-bottom: 0;
+    @include afterSet;
+    button.button-modify {
+        display: inline-block;
+        width: 90px;
+        padding: 13px 0;
+        background: #758298;
+        color: #fff;
+        text-align: center;
+        border-radius: 22px;
+        font-size: 12px;
+    }
+    button.button-delete {
+        display: inline-block;
+        width: 90px;
+        padding: 13px 0;
+        margin-left: 10px;
+        background: #ef5350;
+        color: #fff;
+        text-align: center;
+        border-radius: 22px;
+        font-size: 12px;
+    }
+    button.small {
+        width: 60px;
+        padding: 5px 0;
+    }
+    button.button-delete.small {
+        margin-left: 4px;
+    }
+}
+
+.table-style2+.button-wrap {
+    width: 124px;
+    float: right;
+    margin-bottom: 50px;
 }
 
 
@@ -562,6 +462,15 @@ select::ms-expand {
             float: right;
             width: 67%;
         }
+        @media screen and(max-width:720px) {
+            p {
+                width: 100%
+            }
+            .select-wrap {
+                float: left;
+                width: 100%;
+            }
+        }
     }
 }
 
@@ -569,6 +478,7 @@ select::ms-expand {
     width: 100%;
     .top-container {
         @include afterSet;
+        @include boxSizing;
         .left-wrap {
             float: left;
             width: 50%;
@@ -577,6 +487,12 @@ select::ms-expand {
             @include boxSizing;
             border: 1px solid #c8d2e2;
             border-right: 0;
+            @media screen and(max-width: 1200px) {
+                padding: 4% 5%;
+            }
+            @media screen and(max-width: 500px) {
+                width: 100%;
+            }
         }
         .right-wrap {
             float: left;
@@ -585,17 +501,30 @@ select::ms-expand {
             background-color: #e7edf5;
             @include boxSizing;
             border: 1px solid #c8d2e2;
+            @media screen and(max-width: 1200px) {
+                padding: 4% 5%;
+            }
+            @media screen and(max-width: 500px) {
+                width: 100%;
+            }
         }
         .select-form {
             display: inline-block;
             width: 120px;
             height: 34px;
             margin-left: 10px;
+            @media screen and(max-width: 1080px) {
+                width: 100%;
+                margin-left: 0;
+            }
         }
         p {
             display: inline-block;
             font-size: 12px;
             color: #666;
+            @media screen and(max-width: 1080px) {
+                display: block;
+            }
         }
         .switch-wrap {
             @include afterSet;
@@ -608,6 +537,10 @@ select::ms-expand {
                 font-size: 12px;
                 line-height: 25px;
                 color: #666;
+                @media screen and(max-width: 1080px) {
+                    width: 33%;
+                    text-align: center;
+                }
             }
             .switch-box {
                 float: left;
@@ -667,6 +600,12 @@ select::ms-expand {
                         opacity: 1;
                     }
                 }
+            }
+            @media screen and(max-width:1200px) {
+                padding-left: 30%;
+            }
+            @media screen and(max-width: 1080px) {
+                padding: 2%;
             }
         }
     }
@@ -870,54 +809,142 @@ select::ms-expand {
 }
 
 
-/* phone-form */
+/* table */
 
-.phone-form {
+.table-style1 {
+    text-align: center;
+    margin-top: 2px;
+    margin-bottom: 30px;
     @include afterSet;
-    input:first-child {
-        float: left;
-        width: 177px;
-        margin-right: 10px;
+    tr th {
+        background-color: #e7edf5;
+        font-size: 12px;
+        font-weight: bold;
+        color: #384d6e;
+        border: 1px solid #c8d2e2;
     }
-    input {
-        float: right;
-        width: 340px;
+    th,
+    td {
+        padding: 10px 20px;
+        border-bottom: 1px solid #c8d2e2;
+        border-left: 1px solid #c8d2e2;
+        border-right: 1px solid #c8d2e2;
+    }
+    tr th:first-child,
+    tr td:first-child {
+        border-left: 0
+    }
+    tr th:last-of-type,
+    tr td:last-of-type,
+    {
+        border-right: 0
+    }
+    td {
+        color: #858585;
+        font-size: 12px;
+    }
+}
+
+table+.last-button-wrap {
+    padding-top: 40px;
+}
+
+.table-style2 {
+    width: 100%;
+    margin-bottom: 8px;
+    border-top: 2px solid #b8c2d3;
+    border-bottom: 2px solid #b8c2d3;
+    th {
+        font-size: 12px;
+        color: #384d6e;
+        font-weight: bold;
+        text-align: center;
+        padding: 10px;
+        border-right: 1px solid #b8c2d3;
+        border-bottom: 1px solid #b8c2d3;
+    }
+    td {
+        font-size: 12px;
+        color: #666;
+        padding: 10px;
+        border-bottom: 1px solid #b8c2d3;
+    }
+}
+
+table {
+    &.table-hasForm {
+        td {
+            padding: 5px;
+        }
+    }
+    td {
+        input[type="text"] {
+            padding: 6px 10px;
+            border-radius: 4px;
+            border: 1px solid #b9b9b9;
+        }
     }
 }
 
 
-/* account-form */
+/* tab menu */
 
-.account-form {
+.tab-wrap {
     @include afterSet;
-    .select-form {
-        float: left;
-        width: 201px;
-        height: 40px;
-        margin-right: 10px;
-    }
-    input {
-        float: right;
-        width: 340px;
+    ul.tab-menu {
+        @include afterSet;
+        li {
+            float: left;
+            width: 192px;
+            padding: 10px 0;
+            text-align: center;
+            color: #b8c2d3;
+            background-color: #758298;
+        }
+        li.active {
+            color: #758298;
+            background-color: #e7edf5;
+        }
+        li:nth-child(2) {
+            margin: 0 2px;
+        }
     }
 }
 
-.zipCode-form {
-    @include afterSet;
-    input {
-        float: left;
-        width: 300px;
-        margin-right: 10px;
+.info-page-check {
+    margin-top: 19px;
+    font-size: 14px;
+    .full-block {
+        padding: 9px 0;
     }
+    span {
+        display: inline-block;
+        padding-right: 80px;
+    }
+}
+
+.scheduleList-wrap {
+    margin-top: 20px;
+    padding-bottom: 40px;
+}
+
+
+/* updown form */
+
+.button-wrap.updown-form {
+    position: relative;
+    top: 9px;
+    left: 0;
+    @include afterSet;
+    margin-bottom: 0;
     button {
         float: left;
-        width: 120px;
-        height: 44px;
-        line-height: 44px;
-        background-color: #758298;
-        color: #fff;
-        text-align: center;
-        font-size: 14px;
-        border-radius: 22px;
+        width: 40px;
+        height: 24px;
+        border: 1px solid #a6b2c6;
+        font-size: 0;
+    }
+    button.button-down {
+        border-left: 0;
     }
 }
