--- a/project/src/assets/css/reset.css
+++ b/project/src/assets/css/reset.css
@@ -145,6 +145,10 @@ form {
     border: 0;
 }
 
+img {
+    width: 100%
+}
+
 ul,
 ol {
     list-style: none;
@@ -287,6 +291,12 @@ optgroup {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+table caption {
+    font-size: 0;
+    margin: 0;
+    padding: 0
 }
 
 td,
