--- a/project/src/assets/css/common.scss
+++ b/project/src/assets/css/common.scss
@@ -835,8 +835,7 @@ h1 {
         border-left: 0
     }
     tr th:last-of-type,
-    tr td:last-of-type,
-    {
+    tr td:last-of-type {
         border-right: 0
     }
     td {
