--- a/project/src/assets/css/_form.scss
+++ b/project/src/assets/css/_form.scss
@@ -81,7 +81,7 @@ input[type="text"]+label {
 }
 
 .form-wrap {
-    input[type="text"] {
+    input[type="text"], input[type="password"] {
         padding: 10px 12px;
         color: #999;
         border-radius: 4px;
@@ -96,6 +96,27 @@ input[type="text"]+label {
     .form-middle>input {
         width: 70%;
         @include boxSizing;
+    }
+}
+.login-form {
+    input {
+        width:100%;
+        @include boxSizing;
+    }
+    label, input+label {
+        display: block;
+        position: relative;
+        top:0;
+        left:0;
+        width:100%;
+        height:20px;
+        line-height:20px;
+        font-size: 12px;
+        color: #333;
+        font-weight:bold;
+        cursor: pointer;
+        text-indent: initial;
+        overflow: initial;
     }
 }
 
