--- a/project/src/assets/css/common.scss
+++ b/project/src/assets/css/common.scss
@@ -200,7 +200,7 @@ h1 {
 
 /* 파트너센터 - 기본 레이아웃 */
 
-#center-wrap {
+#center-wrap, .account-wrap {
     width: 100%;
     min-height: 100vh;
     height: 100%;
@@ -210,7 +210,21 @@ h1 {
         padding-top: 0;
     }
 }
-
+.account-wrap {padding-top:0}
+.account-container {
+    @include afterSet;
+    margin:0 auto;
+    .left-wrap {
+        float:left;        
+        width:38%;
+    }
+    .content {
+        float:left;
+        width:62%;
+        padding:8.75em 7.5em;
+        @include boxSizing;
+    }
+}
 .sub-container {
     overflow: hidden;
     margin: 0 auto;
