--- a/project/src/assets/css/_form.scss
+++ b/project/src/assets/css/_form.scss
@@ -33,7 +33,7 @@ input[type="radio"] {
 input[type="radio"]+label {
     display: inline-block;
     position: relative;
-    top: -3px;
+    top: 0;
     padding-left: 28px;
     font-size: 14px;
     color: #333;
@@ -81,7 +81,9 @@ input[type="text"]+label {
 }
 
 .form-wrap {
-    input[type="text"], input[type="password"] {
+    input[type="text"],
+    input[type="password"] {
+        @include boxSizing;
         padding: 10px 12px;
         color: #999;
         border-radius: 4px;
@@ -98,25 +100,35 @@ input[type="text"]+label {
         @include boxSizing;
     }
 }
+
 .login-form {
     input {
-        width:100%;
+        width: 100%;
         @include boxSizing;
     }
-    label, input+label {
+    label,
+    input+label {
         display: block;
         position: relative;
-        top:0;
-        left:0;
-        width:100%;
-        height:20px;
-        line-height:20px;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 20px;
+        line-height: 20px;
         font-size: 12px;
         color: #333;
-        font-weight:bold;
+        font-weight: bold;
         cursor: pointer;
         text-indent: initial;
         overflow: initial;
+    }
+    label.pw-label {
+        @media screen and(max-width: 720px) {
+            margin-top: 20px;
+        }
+    }
+    @media screen and(max-width:720px) {
+        margin-bottom: 16px;
     }
 }
 
@@ -133,10 +145,6 @@ select {
     height: 100%;
     position: relative;
     z-index: 2;
-}
-
-select::ms-expand {
-    display: none;
 }
 
 .select-form {
@@ -169,24 +177,34 @@ select::ms-expand {
 
 .date-list {
     @include afterSet;
-    margin-bottom: 8px;
+    margin-bottom: 52px;
+    position: relative;
+    width: 100%;
     p {
         margin-bottom: 4px;
     }
     .select-form {
-        float: left;
-        width: 31.6%;
+        position: absolute;
+        left: 0;
+        width: 32.6%;
         @media screen and (max-width: 412px) {
             width: 100%;
             margin-bottom: 8px;
         }
     }
     .select-month {
-        margin: 0 5px;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
         @media screen and (max-width: 412px) {
             margin: 0;
             margin-bottom: 8px;
         }
+    }
+    .select-day {
+        position: absolute;
+        left: auto;
+        right: 0;
     }
 }
 
