--- a/project/src/assets/css/common.scss
+++ b/project/src/assets/css/common.scss
@@ -16,6 +16,217 @@ header {
     border-bottom: 1px solid #ccc;
 }
 
+#header {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 90px;
+    margin: 0 auto;
+    @media screen and(max-width: 900px) {
+        height: 56px;
+    }
+    .user-header {
+        .m-header,
+        .m-header span {
+            display: inline-block;
+            transition: all .4s;
+            box-sizing: border-box;
+        }
+        .m-header {
+            position: relative;
+            width: 28px;
+            height: 28px;
+            @include boxSizing;
+            margin: 14px;
+            span {
+                position: absolute;
+                left: 0;
+                width: 16px;
+                height: 2px;
+                margin: 6px;
+                background-color: #000;
+                border-radius: 4px;
+            }
+            span:nth-of-type(1) {
+                top: -1px;
+                -webkit-animation: menubar01 .75s forwards;
+                animation: menubar01 .75s forwards;
+            }
+            @-webkit-keyframes menubar01 {
+                0% {
+                    -webkit-transform: translateY(20px) rotate(45deg);
+                }
+                50% {
+                    -webkit-transform: translateY(20px) rotate(0);
+                }
+                100% {
+                    -webkit-transform: translateY(0) rotate(0);
+                }
+            }
+            @keyframes menubar01 {
+                0% {
+                    transform: translateY(20px) rotate(45deg);
+                }
+                50% {
+                    transform: translateY(20px) rotate(0);
+                }
+                100% {
+                    transform: translateY(0) rotate(0);
+                }
+            }
+            span:nth-of-type(2) {
+                top: 6px;
+                transition: all .25s .25s;
+                opacity: 1;
+            }
+            span:nth-of-type(3) {
+                bottom: 0;
+                -webkit-animation: menubar02 .75s forwards;
+                animation: menubar02 .75s forwards;
+            }
+            @-webkit-keyframes menubar02 {
+                0% {
+                    -webkit-transform: translateY(-20px) rotate(-45deg);
+                }
+                50% {
+                    -webkit-transform: translateY(-20px) rotate(0);
+                }
+                100% {
+                    -webkit-transform: translateY(0) rotate(0);
+                }
+            }
+            @keyframes menubar02 {
+                0% {
+                    transform: translateY(-20px) rotate(-45deg);
+                }
+                50% {
+                    transform: translateY(-20px) rotate(0);
+                }
+                100% {
+                    transform: translateY(0) rotate(0);
+                }
+            }
+            .active span:nth-of-type(1) {
+                -webkit-animation: active-menu-bar07-01 .75s forwards;
+                animation: active-menu-bar07-01 .75s forwards;
+            }
+            @-webkit-keyframes active-menu-bar07-01 {
+                0% {
+                    -webkit-transform: translateY(0) rotate(0);
+                }
+                50% {
+                    -webkit-transform: translateY(20px) rotate(0);
+                }
+                100% {
+                    -webkit-transform: translateY(20px) rotate(45deg);
+                }
+            }
+            @keyframes active-menu-bar07-01 {
+                0% {
+                    transform: translateY(0) rotate(0);
+                }
+                50% {
+                    transform: translateY(20px) rotate(0);
+                }
+                100% {
+                    transform: translateY(20px) rotate(45deg);
+                }
+            }
+            .active span:nth-of-type(2) {
+                opacity: 0;
+            }
+            .active span:nth-of-type(3) {
+                -webkit-animation: active-menu-bar07-02 .75s forwards;
+                animation: active-menu-bar07-02 .75s forwards;
+            }
+            @-webkit-keyframes active-menu-bar07-02 {
+                0% {
+                    -webkit-transform: translateY(0) rotate(0);
+                }
+                50% {
+                    -webkit-transform: translateY(-20px) rotate(0);
+                }
+                100% {
+                    -webkit-transform: translateY(-20px) rotate(-45deg);
+                }
+            }
+            @keyframes active-menu-bar07-02 {
+                0% {
+                    transform: translateY(0) rotate(0);
+                }
+                50% {
+                    transform: translateY(-20px) rotate(0);
+                }
+                100% {
+                    transform: translateY(-20px) rotate(-45deg);
+                }
+            }
+            @media screen and(min-width: 900px) {
+                display: none;
+            }
+        }
+        .gnb {
+            @media screen and(max-width: 900px) {
+                display: none;
+            }
+            @include afterSet;
+            position: absolute;
+            top:33px;
+            right:50px;
+            li {
+                float: left;
+                margin: 0 10px;
+                font-size: 16px;
+                color: #333;
+            }
+            li:nth-child(2) {
+                position: relative;
+                &:before {
+                    display: block;
+                    content: '';
+                    position: absolute;
+                    top: 4px;
+                    left: -11px;
+                    width: 1px;
+                    height: 16px;
+                    background: #333;
+                }
+                &:after {
+                    display: block;
+                    content: '';
+                    position: absolute;
+                    top: 4px;
+                    right: -10px;
+                    width: 1px;
+                    height: 16px;
+                    background: #333;
+                }
+            }
+        }
+        h1 {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            margin-top: -30px;
+            margin-left: 80px;
+            height: 90px;
+            width: 180px;
+            -o-box-sizing: border-box;
+            -ms-box-sizing: border-box;
+            box-sizing: border-box;
+            @media screen and(max-width: 900px) {
+                position: absolute;
+                top: 0;
+                left: 50%;
+                margin: 0 auto;
+                width: 182px;
+                height: 56px;
+                transform: translateX(-50%)
+            }
+        }
+    }
+}
+
 //footer
 footer {
     width: 100%;
@@ -32,9 +243,9 @@ footer {
             float: left;
             width: 50%;
             text-align: left;
-            @media screen and (max-width: $break-tab) {
+            @media screen and (max-width: 720px) {
                 float: initial;
-                width: 100%;
+                width: 314px;
                 margin: 0 auto;
             }
             ul {
@@ -52,7 +263,10 @@ footer {
                         width: 1px;
                         height: 10px;
                         margin-top: -5px;
-                        background-color: #222;
+                        background-color: #999;
+                    }
+                    &:last-child:after {
+                        width: 0;
                     }
                     a {
                         text-decoration: none;
@@ -69,6 +283,12 @@ footer {
                 float: initial;
                 width: 100%;
                 margin: 0 auto;
+                word-break: break-all;
+                word-wrap: break-word;
+            }
+            @media screen and (max-width: $break-mobile) {
+                font-size: 12px;
+                text-align: center;
             }
         }
         @media screen and(max-width: $break-tab) {
@@ -78,6 +298,16 @@ footer {
             max-width: 750px;
         }
     }
+}
+
+#account-wrap+footer {
+    display: none;
+}
+
+.subFooter {
+    margin-top: 50px;
+    text-align: center;
+    background-color: #fff;
 }
 
 
@@ -201,8 +431,9 @@ h1 {
 /* 파트너센터 - 기본 레이아웃 */
 
 #center-wrap,
-.account-wrap {
-    width: 100%;
+#account-wrap {
+    width: 1440px;
+    margin: 0 auto;
     min-height: 100vh;
     height: 100%;
     padding-top: 40px;
@@ -212,8 +443,12 @@ h1 {
     }
 }
 
-.account-wrap {
-    padding-top: 0
+
+/* personal info - signUp */
+
+#account-wrap {
+    padding-top: 0;
+    background-color: #fff;
 }
 
 .account-container {
@@ -221,15 +456,123 @@ h1 {
     margin: 0 auto;
     .left-wrap {
         float: left;
-        width: 38%;
-        // background: url(../assets/images/side_bg.png) repeat-y;
-        background-attachment: fixed;
+        width: 735px;
+        height: 100vh;
+        min-height: 990px;
+        background: url('../images/side_bg.png') repeat-y;
+        background-size: auto 100%;
+        background-position: top right;
+        @media screen and(max-width: 720px) {
+            display: none;
+        }
     }
     .content {
         float: left;
-        width: 62%;
+        max-width: 700px;
+        width: 100%;
         padding: 8.75em 7.5em;
         @include boxSizing;
+        @media screen and(max-width: 720px) {
+            width: 100%;
+            padding: 2.5em 1.87em;
+        }
+        .form-wrap {
+            label {
+                display: block;
+                font-size: 12px;
+                margin-bottom: 2px;
+                color: #333;
+                font-weight: bold;
+            }
+            input[type="text"],
+            input[type="password"] {
+                width: 100%;
+                font-size: 14px;
+            }
+            .date-list,
+            .hint-form {
+                p {
+                    font-size: 12px;
+                    color: #333;
+                    font-weight: bold;
+                }
+            }
+            .hompage-form {
+                label {
+                    width: 100%
+                }
+                input[type="text"] {
+                    display: inline-block;
+                    width: 70%;
+                }
+                p {
+                    display: inline-block;
+                    margin-left: 7px;
+                }
+            }
+        }
+    }
+    .signUp-wrap {
+        height: 1830px;
+        max-height: 100%;
+        background: url('../images/side_bg3.png') repeat-y;
+        background-size: 100% 100%;
+    }
+}
+
+.signup-info {
+    font-size: 14px;
+    color: #999;
+    padding: 0 4.5em;
+    .link {
+        display: inline-block;
+        font-size: 14px;
+        color: #666;
+        vertical-align: bottom;
+        border-bottom: 1px solid #666;
+    }
+    margin-bottom:80px;
+    @media screen and(max-width:$break-mobile) {
+        margin-bottom: 4.3em;
+        padding: 0;
+    }
+}
+
+.findInfo-wrap {
+    @include afterSet;
+    .left-box,
+    .right-box {
+        float: left;
+        width: 50%;
+    }
+    .right-box {
+        text-align: center;
+        .link {
+            display: inline-block;
+            font-size: 14px;
+            color: #666;
+            vertical-align: bottom;
+            border-bottom: 1px solid #666;
+            margin: 0 5px;
+        }
+    }
+    @media screen and(max-width: $break-mobile) {
+        .left-box,
+        .right-box {
+            width: 100%;
+        }
+        .right-box {
+            margin: 40px 0 20px 0;
+        }
+    }
+}
+
+.findInfo-wrap+.button-wrap {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    @media screen and(max-width: 720px) {
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
 
@@ -865,6 +1208,9 @@ table {
 .button-wrap {
     margin-bottom: 80px;
     text-align: center;
+    @media screen and(max-width: $break-mobile) {
+        margin-bottom: 20px;
+    }
     button {
         display: inline-block;
         margin: 0 auto;
