--- a/project/src/assets/css/_form.scss
+++ b/project/src/assets/css/_form.scss
@@ -122,10 +122,8 @@ input[type="text"]+label {
         text-indent: initial;
         overflow: initial;
     }
-    label.pw-label {
-        @media screen and(max-width: 720px) {
-            margin-top: 20px;
-        }
+    .pw-label {
+        margin-top: 20px;
     }
     @media screen and(max-width:720px) {
         margin-bottom: 16px;
@@ -177,9 +175,9 @@ select {
 
 .date-list {
     @include afterSet;
-    margin-bottom: 52px;
     position: relative;
     width: 100%;
+    height: 62px;
     p {
         margin-bottom: 4px;
     }
