--- a/project/src/assets/css/common.scss
+++ b/project/src/assets/css/common.scss
@@ -432,12 +432,15 @@ h1 {
 
 #center-wrap,
 #account-wrap {
-    width: 1440px;
+    max-width: 1920px;
+    width: 100%;
     margin: 0 auto;
-    min-height: 100vh;
     height: 100%;
     padding-top: 40px;
     background-color: #efefef;
+    @media screen and(max-width: 1139px) {
+        width: 100%
+    }
     @media screen and (max-width: 720px) {
         padding-top: 0;
     }
@@ -460,25 +463,43 @@ h1 {
     margin: 0 auto;
     .left-wrap {
         float: left;
-        width: 735px;
+        width: 48%;
+        max-width: 735px;
         height: 100vh;
         min-height: 990px;
         background: url('../images/side_bg.png') repeat-y;
         background-size: auto 100%;
         background-position: top right;
+        @media screen and(max-width: 1440px) {
+            width: 40%;
+        }
+        @media screen and(max-width: 1080px) {
+            width: 35%;
+        }
         @media screen and(max-width: 720px) {
             display: none;
         }
     }
     .content {
         float: left;
-        max-width: 700px;
-        width: 100%;
-        padding: 8.75em 0 8.75em 7.5em;
+        max-width: 1140px;
+        width: 52%;
+        padding: 8.75em 7.2em 8.75em 7.2em;
         @include boxSizing;
+        @media screen and(max-width: 1440px) {
+            width: 60%;
+        }
+        @media screen and(max-width: 1080px) {
+            width: 65%;
+        }
         @media screen and(max-width: 720px) {
             width: 100%;
             padding: 2.5em 1.87em;
+        }
+        .sub-text {
+            margin-bottom: 20px;
+            font-size: 16px;
+            color: #333;
         }
         .form-wrap {
             label {
@@ -516,18 +537,92 @@ h1 {
                 }
             }
         }
-    }
+        .signupComplete-title {
+            font-size: 34px;
+            font-weight: bold;
+            color: #2454d9;
+            text-align: center;
+            span {
+                font-weight: normal;
+            }
+            @media screen and(max-width:$break-mobile) {
+                br {
+                    display: none;
+                }
+            }
+        }
+        .signupComplete-info {
+            p {
+                font-size: 13px;
+                margin: 20px 0 80px 0;
+                color: #333;
+                line-height: 1.6;
+            }
+            .title {
+                font-size: 16px;
+                color: #000;
+                font-weight: bold;
+                margin: 0 auto;
+                margin-top: 80px;
+                line-height: 1;
+            }
+            .user-infomation {
+                display: block;
+                width: 100%;
+                font-size: 20px;
+                li {
+                    @include boxSizing;
+                    width: 100%;
+                    padding: 15px 0 15px 73px;
+                    margin-top: 8px;
+                    border-radius: 30px;
+                    background-color: #f4f4f4;
+                    text-align: left;
+                    color: #333;
+                    span {
+                        color: #000;
+                    }
+                }
+            }
+            @media screen and(max-width:$break-mobile) {
+                br {
+                    display: none;
+                }
+            }
+        }
+        .bottom-text-wrap {
+            margin-top: 120px;
+            margin-bottom: 80px;
+            color: #333;
+            font-size: 16px;
+            strong {
+                font-weight: bold;
+            }
+            a {
+                color: #2454d9;
+                text-decoration: underline;
+            }
+        }
+        .paswordComplete-text {
+            margin: 20px 0 70px 0;
+        }
+    } //content end
     .signUp-wrap {
         height: 2061px;
         max-height: 100%;
         background: url('../images/side_bg3.png') repeat-y;
         background-size: 100% 100%;
     }
+    .signUp-wrap.short,
+    .left-wrap.short {
+        height: 93vh;
+    }
     .findId-wrap {
-        height: 1080px;
+        height: 95vh;
         max-height: 100%;
         background: url('../images/side_bg2.png') repeat-y;
-        background-size: 100% 100%;
+        background-size: auto 100%;
+        background-position: top right;
     }
     .login-wrap {
         height: 1080px;
@@ -535,9 +630,9 @@ h1 {
         background: url('../images/side_bg.png') repeat-y;
         background-size: 100% 100%;
     }
-    .signUp-wrap.style2 {
-        height: 1210px
-    }
+    // .signUp-wrap.style2 {
+    //     height: 1210px
+    // }
     //약관동의
     .terms-title {
         font-size: 12px;
@@ -562,8 +657,7 @@ h1 {
     .terms-wrap+form {
         margin-top: 10px;
     }
-}
-
+} //account-container end
 .captcha-wrap {
     margin-bottom: 70px;
 }
@@ -676,14 +770,20 @@ h1 {
     }
 }
 
-.form-wrap .info-text {
+.form-wrap .info-text,
+.content .info-text {
     margin-bottom: 20px;
     font-size: 14px;
     color: #999;
 }
 
-.form-wrap .info-text-row {
+.form-wrap .info-text-row,
+.content .info-text-row {
     margin-bottom: 6px;
+}
+
+.info-text.style2 {
+    margin-top: 10px
 }
 
 .left-menu {
@@ -775,6 +875,7 @@ h1 {
 /* setting ship */
 
 .schedule-wrap {
+    margin-top: 8px;
     .setting-shipName,
     .setting-shipNum {
         @include afterSet;
@@ -852,11 +953,27 @@ h1 {
                 display: block;
             }
         }
+        .resultButton-wrap {
+            input[type="button"] {
+                display: block;
+                min-width: 75px;
+                padding: 4px 0;
+                height: 25px;
+                margin: 0 auto;
+                margin-top: 7px;
+                background: #758298;
+                color: #fff;
+                text-align: center;
+                border-radius: 30px;
+                font-size: 12px;
+            }
+        }
         .switch-wrap {
             @include afterSet;
             @include boxSizing;
             padding-top: 10px;
             padding-left: 58px;
+            height: 32px;
             span {
                 float: left;
                 display: block;
@@ -988,8 +1105,10 @@ h1 {
         li {
             position: relative;
         }
-        input[type="checkbox"] {
-            display: inline-block;
+        input[type="checkbox"],
+        .myjari {
+            position: absolute;
+            display: none;
             @include boxSizing;
             width: 22px;
             height: 22px;
@@ -1138,8 +1257,7 @@ h1 {
 /* table */
 
 .table-wrap {
-    overflow-x: scroll;
-    width: 100%;
+    overflow-x: auto;
     white-space: nowrap;
 }
 
@@ -1150,6 +1268,9 @@ h1 {
     margin-top: 2px;
     margin-bottom: 30px;
     white-space: nowrap;
+    @media screen and(max-width: 1500px) {
+        width: 580px;
+    }
     tr th {
         background-color: #e7edf5;
         font-size: 12px;
@@ -1203,6 +1324,9 @@ table+.last-button-wrap {
         padding: 10px;
         border-bottom: 1px solid #b8c2d3;
     }
+    .color-red {
+        color: #e53935
+    }
 }
 
 table {
@@ -1229,7 +1353,7 @@ table {
         @include afterSet;
         li {
             float: left;
-            width: 192px;
+            width: 33%;
             padding: 10px 0;
             text-align: center;
             color: #b8c2d3;
@@ -1240,7 +1364,7 @@ table {
             background-color: #e7edf5;
         }
         li:nth-child(2) {
-            margin: 0 2px;
+            margin: 0 0.5%;
         }
     }
 }
@@ -1254,6 +1378,8 @@ table {
     span {
         display: inline-block;
         padding-right: 80px;
+        font-size: 14px;
+        color: #000
     }
 }
 
@@ -1321,8 +1447,8 @@ table {
     @include afterSet;
     button.button-modify {
         display: inline-block;
-        width: 90px;
-        padding: 13px 0;
+        width: 60px;
+        padding: 5px 0;
         background: #758298;
         color: #fff;
         text-align: center;
@@ -1331,8 +1457,8 @@ table {
     }
     button.button-delete {
         display: inline-block;
-        width: 90px;
-        padding: 13px 0;
+        width: 60px;
+        padding: 5px 0;
         margin-left: 10px;
         background: #ef5350;
         color: #fff;
