--- a/project/src/assets/css/_form.scss
+++ b/project/src/assets/css/_form.scss
@@ -18,7 +18,12 @@ input:focus {
 
 /* radio form */
 
-input[type="radio"] {
+input[type="radio"],
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     /* 기본 디자인 리셋 */
     position: absolute;
     width: 1px;
@@ -30,6 +35,57 @@ input[type="radio"] {
     border: 0;
 }
 
+input[type="checkbox"]+label {
+    position: relative;
+    display: block;
+    padding-left: 28px;
+    line-height: 20px;
+}
+
+input[type="checkbox"]+label:before {
+    display: block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-right: 8px;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
+    border: solid 1px #999999;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+input[type="checkbox"]:checked+label:before {
+    display: block;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px;
+    border: solid 1px #3c6bef;
+    background-color: #3c6bef;
+}
+
+input[type="checkbox"]:checked+label:after {
+    display: block;
+    content: '';
+    position: absolute;
+    top: 6px;
+    left: 5px;
+    width: 12px;
+    height: 9px;
+    background: url(../images/icon_chk.png) no-repeat;
+    background-position: 0 0;
+    background-size: 100% 100%;
+}
+
+// input[type="checkbox"]+label {
+//     display: inline-block !important;
+//     margin-bottom: 0 !important;
+//     font-size: 14px;
+//     color: #666;
+// }
 input[type="radio"]+label {
     display: inline-block;
     position: relative;
